[gd_scene load_steps=15 format=3 uid="uid://ctf01l8umfh5d"]

[ext_resource type="Script" uid="uid://bag5vv3x50wl4" path="res://scenes/Player/player_body.gd" id="1_hvfru"]
[ext_resource type="Texture2D" uid="uid://daghoato402dg" path="res://assets/images/toilet_debug.png" id="2_a06cl"]
[ext_resource type="Script" uid="uid://ddc0nsh30q4og" path="res://scenes/_debug/Steffen/follow_cam.gd" id="3_dl1wr"]
[ext_resource type="Script" uid="uid://bol6dlvq252ru" path="res://scenes/Player/custom_joint.gd" id="4_wwtew"]
[ext_resource type="Texture2D" uid="uid://bu2javu6ivbji" path="res://assets/images/test/toilet_paper.png" id="5_uxo23"]
[ext_resource type="Script" uid="uid://hdw54jovtong" path="res://scenes/Player/target_indicator.gd" id="6_n7rn1"]
[ext_resource type="Script" uid="uid://ch3o4nn7tdkpo" path="res://scenes/Player/verlet_rope.gd" id="7_dl1wr"]
[ext_resource type="Material" uid="uid://c7fr7y7myakdy" path="res://resources/shaders/outline.tres" id="8_wwtew"]
[ext_resource type="Texture2D" uid="uid://coqqo1fmdsue2" path="res://icon.svg" id="9_wwtew"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ovmwo"]
friction = 0.1
bounce = 0.3

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3y6uy"]
radius = 7.33754
height = 33.8367

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_55gqm"]
radius = 6.23372
height = 22.3146

[sub_resource type="Curve" id="Curve_7wess"]
_data = [Vector2(0, 0), 0.0, -0.102211, 0, 0, Vector2(0.223404, 0), 0.0, 0.285454, 1, 0, Vector2(0.659575, 0.235955), 1.4624, 1.4624, 0, 0, Vector2(1, 0.449438), -0.203111, 0.0, 0, 0]
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_434gd"]
size = Vector2(60, 50)

[node name="PlayerBody" type="RigidBody2D" node_paths=PackedStringArray("rope", "rope_target", "custom_joint", "ground_cast")]
physics_material_override = SubResource("PhysicsMaterial_ovmwo")
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_hvfru")
rope = NodePath("VerletRope")
rope_target = NodePath("RopeTarget")
custom_joint = NodePath("CustomJoint")
ground_cast = NodePath("GroundShapeCheck")

[node name="CharPicDebug" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_a06cl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-12, 2)
rotation = -0.229376
scale = Vector2(2.88, 2.88)
shape = SubResource("CapsuleShape2D_3y6uy")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(7, 12)
rotation = -1.64299
scale = Vector2(2.88, 2.88)
shape = SubResource("CapsuleShape2D_55gqm")

[node name="FollowCam" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
script = ExtResource("3_dl1wr")
curve = SubResource("Curve_7wess")

[node name="CustomJoint" type="Node2D" parent="."]
script = ExtResource("4_wwtew")

[node name="TargetIndicator" type="Sprite2D" parent="."]
z_index = 1680
position = Vector2(149, 6.00002)
scale = Vector2(0.340013, 0.340013)
texture = ExtResource("5_uxo23")
script = ExtResource("6_n7rn1")

[node name="GroundShapeCheck" type="ShapeCast2D" parent="."]
shape = SubResource("RectangleShape2D_434gd")
target_position = Vector2(0, 28.35)
max_results = 4

[node name="RopeOrigin" type="Node2D" parent="."]
position = Vector2(14, -13)

[node name="VerletRope" type="Node2D" parent="." node_paths=PackedStringArray("rope", "rope_anchor", "rope_origin")]
top_level = true
script = ExtResource("7_dl1wr")
pull_strength = 100.0
rope = NodePath("RopeRender")
rope_anchor = NodePath("Anchor")
rope_origin = NodePath("../RopeOrigin")
iteration_count = 50

[node name="Anchor" type="Node2D" parent="VerletRope"]
top_level = true
position = Vector2(41, -339)

[node name="RopeRender" type="Line2D" parent="VerletRope"]
visible = false
texture_repeat = 2
material = ExtResource("8_wwtew")
points = PackedVector2Array(0, 0, 41.42, 35.215)
texture_mode = 1

[node name="RopeTarget" type="Sprite2D" parent="."]
visible = false
top_level = true
scale = Vector2(0.121204, 0.121204)
texture = ExtResource("9_wwtew")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
